<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_name">FreelenceLive</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="forgot_your_password__string">Forgot your password?</string>
    <string name="register_string">Register</string>
    <string name="fill_the_fields_with_your_username_and_password__string">Fill the fields with your username and password!</string>
    <string name="log_in_ek3_string">LOG IN</string>
    <string name="freelencelive_string">FreelenceLive</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="log_in_ek4_string">LOG IN</string>

    <string name="register_ek3_string">REGISTER</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="__381_string">+381</string>
    <string name="register_ek4_string">REGISTER</string>
    <string name="back_to_login">Back to login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="freelencelivelogodescription">freelencelivelogoDescription</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="freelencelivelogo_1">freelencelivelogo_1</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="begin_your_journey_by_logging_in_or_signing_up__string">Begin your journey\n by logging in\n or\n signing up!</string>
    <string name="polygon_1">polygon_1</string>
    <string name="all_you_need_to_find_a_job__string">All you need to find a job.</string>
    <string name="begin_a_journey_string">BEGIN A JOURNEY</string>
    <string name="email">Email</string>
    <string name="string_invitations">Invitations</string>
    <string name="string_map">Map</string>
    <string name="string_notifications">Notifications</string>
    <string name="button_register">REGISTER</string>
    <string name="openGallery">gallery</string>
    <string name="search_job">Search job...</string>
    <string name="creating_job">CREATING JOB</string>
    <string name="type_title_name">Type title name...</string>
    <string name="create_job">CREATE JOB</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_by_radius">SEARCH BY RADIUS</string>
    <string name="input_radius_in_meters">Input radius in meters..</string>
    <string name="set_location">SET LOCATION</string>
    <string name="opencamera">openCamera</string>
    <string name="freelencelivelogo_2">freelencelivelogo_2</string>
    <string name="JobTitle">JobTitle</string>
    <string name="Date">date</string>
    <string name="invites_you_for">Invites you for:</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="click_to_open_map">Click to open map:</string>
    <string name="wants_to_join_for">Wants to join for:</string>
    <string name="back">BACK</string>
    <string name="overall_score">Overall score:</string>
    <string name="comments">Comments:</string>
    <string name="my_jobs">My Jobs</string>
    <string name="advanced_search">Advanced search</string>
    <string name="job_title">Job title</string>
    <string name="organisator">Organisator:</string>
    <string name="finished">Finished:</string>
    <string name="change_date_and_time">Change date/time:</string>
    <string name="photos">Photos:</string>
    <string name="apply">APPLY</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="my_profile">My profile</string>
    <string name="change_photo">Change photo</string>
    <string name="change_username">Change username</string>
    <string name="your_email">your_email</string>
    <string name="email_"><u>Email:</u></string>
    <string name="phone_number"><u>Phone number:</u></string>
    <string name="password_"><u>Password:</u></string>
    <string name="first_name_"><u>First name:</u></string>
    <string name="last_name_"><u>Last name:</u></string>
    <string name="last_name">Last name</string>
    <string name="type_username_of_organisator">Type username of organisator..</string>
    <string name="apply_changes">Apply changes</string>
    <string name="date_and_time">Date and time:</string>
    <string name="cancel">CANCEL</string>
    <string name="send_request">Send request</string>
    <string name="invitations">Invitations</string>
    <string name="notifications">Notifications</string>
    <string name="nav_header_title">Nav header title</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="my_friends">My friends</string>
    <string name="rankings">Rankings</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="friends_profile">Friend\'s profile</string>
    <string name="username_"><u>Username:</u></string>
    <string name="your_username">your Username</string>
    <string name="custom_number">0636555067</string>
    <string name="score">Score:</string>
    <string name="write_a_comment">Write a comment..</string>
    <string name="leave_a_comment">Leave a comment..</string>
    <string name="informations3">If you want, you can request for help or you can help others.</string>
    <string name="informations2">Connect with your friends and organise group jobs in order to finish them easily.</string>
    <string name="informations1">FreelenceLive is a mobile app for everyone who wants to find job online. Firstly, you need to register and that’s all you need to start your journey.</string>
    <string name="informations4">MrFICAX 2022\nAll Right reserved.</string>
    <string name="activate_service">Activate\nservice</string>
    <string name="online">Online</string>
    <string name="invite_for">Invite for:</string>
    <string name="choose_job">Choose job..</string>
    <string name="your_job_title">Your Job title</string>
    <string name="invite">Invite</string>
    <string name="ask_to_join">Ask to JOIN</string>
    <string name="new_pass">New pass..</string>
    <string name="sent_friend_request">Sent friend request!</string>
    <string name="input_username">Input username..</string>
    <string name="rate">RATE</string>
    <string name="no_score">No score</string>
    <string name="other">Other</string>
    <string name="set">SET TIME</string>
    <string name="jobs">Jobs</string>
    <string name="informations">Informations</string>
    <string name="organised_by">Organised by:</string>
    <string name="search">SEARCH</string>


    <string-array name="feelings">
        <item>Sad</item>
        <item>Dissatisfied</item>
        <item>Satisfied</item>
        <item>Happy</item>
        <item>Excited</item>
    </string-array>
</resources>