<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/rectangle_10"
            android:layout_width="430dp"
            android:layout_height="683dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="273dp"
            android:background="@drawable/rectangle_10_shape" />

        <ImageView
            android:id="@+id/freelencelivelogo_2"
            android:layout_width="246dp"
            android:layout_height="235dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            android:contentDescription="freelencelivelogo_2"
            android:src="@drawable/freelencelivelogo_2" />

        <TextView
            android:id="@+id/freelencelive"
            android:layout_width="408.98dp"
            android:layout_height="115.9dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="201dp"
            android:text="@string/freelencelive_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_ek3"
            android:layout_width="457dp"
            android:layout_height="98.02dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="262dp"
            android:gravity="center"
            android:text="@string/register_ek3_string"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="420dp"
            android:background="@drawable/rectangle_9_shape"
            android:hint="@string/username_string" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="490dp"
            android:background="@drawable/rectangle_11_shape"
            android:hint="@string/password_string" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="560dp"
            android:background="@drawable/rectangle_11_shape"
            android:hint="@string/first_name_string"

            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="630dp"
            android:background="@drawable/rectangle_13_shape"
            android:hint="@string/last_name_string" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="273dp"
            android:layout_height="60dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="700dp"
            android:background="@drawable/rectangle_14_shape"
            android:hint="@string/phone_number_string" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_code"
            android:layout_width="89dp"
            android:layout_height="60dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="700dp"
            android:background="@drawable/rectangle_15_shape" />

        <ImageView
            android:id="@+id/vector"
            android:layout_width="93.33dp"
            android:layout_height="78.33dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="334.83dp"
            android:contentDescription="vector"
            android:src="@drawable/profile" />

        <ImageView
            android:id="@+id/vector_ek5"
            android:layout_width="101dp"
            android:layout_height="64.5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="53dp"
            android:layout_marginTop="342.75dp"
            android:layout_marginEnd="80dp"
            android:layout_toEndOf="@+id/vector"
            android:contentDescription="vector_ek5"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/arrow_1"
            android:layout_width="28dp"
            android:layout_height="0dp"
            android:layout_marginStart="87dp"
            android:layout_marginTop="802dp"
            android:contentDescription="arrow_1"
            android:src="@drawable/arrow_1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="227dp"
            android:layout_height="79dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="780dp"
            android:background="@drawable/rectangle_9_shape"
            android:text="REGISTER"
            android:textColor="@color/_bg__log_in_ek2_color"
            android:textSize="36sp"
            android:textStyle="bold"
            app:backgroundTint="@color/rectangle_12_color" />

        <TextView
            android:id="@+id/backToLogin"
            android:layout_width="457dp"
            android:layout_height="98.02dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="825dp"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>